<resources>
    <string name="app_name">Pemasaran produk</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="default_text">-</string>
    <string name="please_wait">Please wait...</string>
    <string name="notification">Notification</string>
    <string name="success">Success</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="sell">Sell</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="your_location">Your Location</string>
    <string name="recommendation">Recommendation</string>
    <string name="my_ads">My Ads</string>
    <string name="mark_as_sold">Mark as Sold</string>
    <string name="edit_product">Edit Product</string>
    <string name="manage_photos">Manage Photos</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="add_product">Add Product</string>
    <string name="product_information">Product Information</string>
    <string name="product_name">Product Name</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="years_of_production">Years of Production</string>
    <string name="price">Price</string>
    <string name="condition">Condition:</string>
    <string name="second_hand">Second Hand</string>
    <string name="new_condition">New</string>
    <string name="product_address">Product Address</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="choose_location">Choose Location</string>
    <string name="current_location">Current Location</string>
    <string name="choose">Choose</string>
    <string name="not_granted">Not Granted</string>
    <string name="search_your_location">Search your location...</string>
    <string name="max_upload_8_photo">Max upload 8 photo</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="field_email">Please field your email</string>
    <string name="valid_email">Please use valid email</string>
    <string name="field_password">Please field your password</string>
    <string name="field_name">Please field your name</string>
    <string name="field_phone">Please field your phone</string>
    <string name="valid_phone">Please use valid phone</string>
    <string name="field_didnt_match">Password didn\'t match</string>

    <string name="field_title">Please field your title</string>
    <string name="field_desc">Please field your description</string>
    <string name="field_brand">Please field your brand</string>
    <string name="field_model">Please field your model</string>
    <string name="field_year_production">Please field your years of production</string>
    <string name="field_price">Please field your price</string>
    <string name="field_address">Please field your address</string>
    <string name="field_location">Please input your location</string>
  <string name="update">Update</string>
</resources>