<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.uploadphoto.UploadPhotoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/normal_100"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/normal_100"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_upload_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_upload_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/add_product"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_view_max_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_upload_8_photo"
        android:layout_marginTop="@dimen/normal_100"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintTop_toBottomOf="@id/app_bar_upload_photo"
        app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upload_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_100"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="4"
        tools:listitem="@layout/item_upload_photo"
        tools:itemCount="8"
        app:layout_constraintTop_toBottomOf="@id/text_view_max_upload"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

    <Button
        android:id="@+id/btn_upload_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginBottom="@dimen/normal_100"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>