<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".presentation.login.LoginActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="@dimen/normal_100"/>

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_end"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="@dimen/normal_100"/>

    <ImageView
      android:id="@+id/image_view_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/image_login"
      android:contentDescription="@null"
      android:layout_marginTop="@dimen/normal_200"
      app:layout_constraintStart_toStartOf="@id/guideline_start"
      app:layout_constraintEnd_toEndOf="@id/guideline_end"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/text_view_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
      android:textColor="@color/onBackground"
      android:fontFamily="sans-serif-medium"
      android:layout_marginTop="@dimen/normal_200"
      app:layout_constraintStart_toStartOf="@id/guideline_start"
      app:layout_constraintTop_toBottomOf="@id/image_view_login"/>

    <ImageView
      android:id="@+id/image_view_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_baseline_email_24"
      android:contentDescription="@null"
      app:layout_constraintStart_toStartOf="@id/guideline_start"
      app:layout_constraintTop_toTopOf="@id/text_input_email_login"
      app:layout_constraintBottom_toBottomOf="@id/text_input_email_login"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_email_login"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_marginTop="@dimen/normal_100"
      android:layout_marginStart="@dimen/normal_100"
      app:layout_constraintEnd_toEndOf="@id/guideline_end"
      app:layout_constraintTop_toBottomOf="@id/text_view_login"
      app:layout_constraintStart_toEndOf="@id/image_view_email">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
      android:id="@+id/image_view_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_baseline_lock_open_24"
      android:contentDescription="@null"
      app:layout_constraintStart_toStartOf="@id/guideline_start"
      app:layout_constraintTop_toTopOf="@id/text_input_password_login"
      app:layout_constraintBottom_toBottomOf="@id/text_input_password_login"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_password_login"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      app:endIconMode="password_toggle"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_marginTop="@dimen/normal_100"
      android:layout_marginStart="@dimen/normal_100"
      app:layout_constraintEnd_toEndOf="@id/guideline_end"
      app:layout_constraintTop_toBottomOf="@id/text_input_email_login"
      app:layout_constraintStart_toEndOf="@id/image_view_password">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/btn_login"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:layout_marginTop="@dimen/normal_250"
      app:layout_constraintTop_toBottomOf="@id/text_input_password_login"
      app:layout_constraintStart_toStartOf="@id/guideline_start"
      app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

    <TextView
      android:id="@+id/text_view_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
      android:text="@string/i_don_t_have_an_account"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="@id/guideline_start"
      app:layout_constraintTop_toTopOf="@id/btn_register_login"
      app:layout_constraintBottom_toBottomOf="@id/btn_register_login"
      app:layout_constraintEnd_toStartOf="@id/btn_register_login"/>

    <Button
      android:id="@+id/btn_register_login"
      android:layout_width="wrap_content"
      android:minWidth="0dp"
      android:layout_height="@dimen/normal_225"
      android:text="@string/register"
      android:letterSpacing="0"
      android:paddingStart="@dimen/small_100"
      android:paddingEnd="@dimen/small_100"
      android:paddingTop="0dp"
      android:paddingBottom="0dp"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_marginBottom="@dimen/normal_100"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@id/guideline_end"
      app:layout_constraintStart_toEndOf="@id/text_view_register"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>